# doorpcl

./: .edge_detector.cpp.swp  .plane_segmenter.cpp.swp  CMakeLists.txt  README.md  config.txt  door_finder.cpp  edge_detector.cpp  edge_detector.h  edge_detector_rviz.cpp  edge_detector_rviz.h  openni_viewer_simple.cpp  planar_segmentation.cpp  plane_segmenter.cpp  plane_segmenter.h  strutils.h
rospkg/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
rospkg/include/door_finder/: .edge_detector.h.swp  .plane_segmenter.h.swp  SimpleConfig.h  edge_detector.h  plane_segmenter.h
rospkg/src/: .config.txt.swp  .edge_detector.cpp.swp  .plane_segmenter.cpp.swp  .ros_interface.cpp.swo  .ros_interface.cpp.swp  \  config.txt  door_finder.cpp  edge_detector.cpp  pcdreader.cpp  plane_segmenter.cpp  ros_interface.cpp
